<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.pagipetang.PagiPetangActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_menu"
        android:gravity="bottom"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:paddingBottom="8dp"
        android:text="@string/txt_dzikir_pagi_amp_petang"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_morning"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_morning"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/desc_morning_image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_dzikir_pagi"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/mainGreen"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="8dp"/>

            <ImageButton
                android:id="@+id/img_btn_dzikir_pagi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="16dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/bg_btn_pagi_petang"
                android:contentDescription="Button with icon to navigate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_evening"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="20dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/card_morning"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_evening"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/desc_morning_image"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_dzikir_petang"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@color/secondargGreen"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="8dp"/>

            <ImageButton
                android:id="@+id/img_btn_dzikir_petang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="16dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/bg_btn_pagi_petang"
                android:contentDescription="Button with icon to navigate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>